--- a/dionysus-webapp/pom.xml
+++ b/dionysus-webapp/pom.xml
@@ -14,7 +14,37 @@
   <packaging>war</packaging>
   <name>Dionysus Webapp</name>
 
+  <repositories>
+    <repository>
+      <id>sae-local</id>
+      <name>Sina app engine SDK</name>
+      <url>file:${project.basedir}/repo</url>
+    </repository>
+  </repositories>
+
   <dependencies>
+    <dependency>
+      <groupId>org.apache.derby</groupId>
+      <artifactId>derby</artifactId>
+      <version>10.11.1.1</version>
+      <scope>runtime</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-test</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-actuator</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-web</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-security</artifactId>
+    </dependency>
     <dependency>
       <groupId>org.dionysus</groupId>
       <artifactId>dionysus-core</artifactId>
@@ -57,7 +87,7 @@
       <version>3.0.2</version>
     </dependency>
   </dependencies>
-  
+
   <build>
     <finalName>dionysus</finalName>
     <plugins>
