--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,17 @@
 
 	<modules>
     <module>dionysus-core</module>
+    <module>dionysus-rest</module>
     <module>dionysus-webapp</module>
   </modules>
+  
+  <build>
+    <plugins>
+      <plugin>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-maven-plugin</artifactId>
+        <version>${spring-boot.version}</version>
+      </plugin>
+    </plugins>
+  </build>
 </project>
