--- a/dionysus-rest/pom.xml
+++ b/dionysus-rest/pom.xml
@@ -26,6 +26,12 @@
 			<version>10.11.1.1</version>
 			<scope>runtime</scope>
 		</dependency>
+		<dependency>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
+			<scope>runtime</scope>
+		</dependency>
+
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
