--- a/dionysus-client/yo/bower.json
+++ b/dionysus-client/yo/bower.json
@@ -2,8 +2,8 @@
   "name": "yo",
   "private": true,
   "dependencies": {
-    "bootstrap": "~3.2.0",
     "modernizr": "~2.8.2",
-    "marionette": "~2.3.2"
+    "marionette": "~2.3.2",
+    "materialize": "~0.95.2"
   }
 }
