--- a/dionysus-webapp/pom.xml
+++ b/dionysus-webapp/pom.xml
@@ -82,6 +82,17 @@
 			</exclusions>
 		</dependency>
 		<dependency>
+		  <groupId>dom4j</groupId>
+		  <artifactId>dom4j</artifactId>
+		  <version>1.6.1</version>
+		  <exclusions>
+		    <exclusion>
+		      <groupId>xml-apis</groupId>
+		      <artifactId>xml-apis</artifactId>
+		    </exclusion>
+		  </exclusions>
+		</dependency>
+		<dependency>
 			<groupId>org.codehaus.woodstox</groupId>
 			<artifactId>woodstox-core-asl</artifactId>
 			<version>4.4.1</version>
