--- a/dionysus-webapp/pom.xml
+++ b/dionysus-webapp/pom.xml
@@ -75,27 +75,31 @@
 			<artifactId>xercesImpl</artifactId>
 			<version>2.11.0</version>
 			<exclusions>
-			  <exclusion>
-			    <groupId>xml-apis</groupId>
-			    <artifactId>xml-apis</artifactId>
-			  </exclusion>
+				<exclusion>
+					<groupId>xml-apis</groupId>
+					<artifactId>xml-apis</artifactId>
+				</exclusion>
 			</exclusions>
 		</dependency>
 		<dependency>
-		  <groupId>dom4j</groupId>
-		  <artifactId>dom4j</artifactId>
-		  <version>1.6.1</version>
-		  <exclusions>
-		    <exclusion>
-		      <groupId>xml-apis</groupId>
-		      <artifactId>xml-apis</artifactId>
-		    </exclusion>
-		  </exclusions>
+			<groupId>dom4j</groupId>
+			<artifactId>dom4j</artifactId>
+			<version>1.6.1</version>
+			<exclusions>
+				<exclusion>
+					<groupId>xml-apis</groupId>
+					<artifactId>xml-apis</artifactId>
+				</exclusion>
+			</exclusions>
 		</dependency>
 		<dependency>
 			<groupId>org.codehaus.woodstox</groupId>
 			<artifactId>woodstox-core-asl</artifactId>
 			<version>4.4.1</version>
+		</dependency>
+		<dependency>
+			<groupId>commons-dbcp</groupId>
+			<artifactId>commons-dbcp</artifactId>
 		</dependency>
 	</dependencies>
 
