--- a/dionysus-core/pom.xml
+++ b/dionysus-core/pom.xml
@@ -17,6 +17,12 @@
 	  <dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
+			<exclusions>
+			  <exclusion>
+			    <groupId>org.springframework.boot</groupId>
+			    <artifactId>spring-boot-starter-jdbc</artifactId>
+			  </exclusion>
+			</exclusions>
 		</dependency>
     <dependency>
       <groupId>joda-time</groupId>
