--- a/dionysus-rest/pom.xml
+++ b/dionysus-rest/pom.xml
@@ -24,7 +24,7 @@
 			<groupId>org.apache.derby</groupId>
 			<artifactId>derby</artifactId>
 			<version>10.11.1.1</version>
-			<scope>runtime</scope>
+      <scope>provided</scope>
 		</dependency>
 		<dependency>
 			<groupId>mysql</groupId>
