--- a/dionysus-webapp/src/main/resources/application-prod.properties
+++ b/dionysus-webapp/src/main/resources/application-prod.properties
@@ -1,4 +1,4 @@
-spring.jpa.generate-ddl: true
-spring.jpa.show-sql: false
+spring.jpa.generate-ddl=true
+spring.jpa.show-sql=false
 spring.jpa.database=MySQL
 spring.jpa.hibernate.naming_strategy=org.hibernate.cfg.ImprovedNamingStrategy
