--- a/dionysus-webapp/src/main/resources/application.properties
+++ b/dionysus-webapp/src/main/resources/application.properties
@@ -1,2 +1,2 @@
-logging.level.org.hibernate: ERROR
-logging.level.org.springframework.web: DEBUG
+logging.level.org.hibernate: INFO
+logging.level.org.springframework.web: INFO
