--- a/dionysus-webapp/src/main/webapp/WEB-INF/web.xml
+++ b/dionysus-webapp/src/main/webapp/WEB-INF/web.xml
@@ -6,6 +6,11 @@
 	<display-name>Dionysus</display-name>
 
 	<context-param>
+		<param-name>spring.profiles.default</param-name>
+		<param-value>prod</param-value>
+	</context-param>
+
+	<context-param>
 		<param-name>contextConfigLocation</param-name>
 		<param-value>org.dionysus.WebApplication</param-value>
 	</context-param>
