--- a/dionysus-rest/pom.xml
+++ b/dionysus-rest/pom.xml
@@ -21,15 +21,14 @@
 		</dependency>
 
 		<dependency>
-			<groupId>org.apache.derby</groupId>
-			<artifactId>derby</artifactId>
-			<version>10.11.1.1</version>
-      <scope>provided</scope>
+			<groupId>com.h2database</groupId>
+			<artifactId>h2</artifactId>
+			<scope>provided</scope>
 		</dependency>
 		<dependency>
 			<groupId>mysql</groupId>
 			<artifactId>mysql-connector-java</artifactId>
-      <scope>provided</scope>
+			<scope>provided</scope>
 		</dependency>
 
 
