--- a/dionysus-webapp/pom.xml
+++ b/dionysus-webapp/pom.xml
@@ -47,9 +47,8 @@
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
-			<groupId>org.apache.derby</groupId>
-			<artifactId>derby</artifactId>
-			<version>10.11.1.1</version>
+      <groupId>com.h2database</groupId>
+      <artifactId>h2</artifactId>
       <scope>provided</scope>
 		</dependency>
 
