--- a/dionysus-rest/src/main/resources/application-prod.properties
+++ b/dionysus-rest/src/main/resources/application-prod.properties
@@ -1,3 +1,3 @@
-spring.jpa.generate-ddl=true
-spring.jpa.show-sql=true
-spring.jpa.database=mysql
+spring.jpa.generate-ddl: true
+spring.jpa.show-sql: true
+spring.jpa.database: mysql
