--- a/dionysus-webapp/src/main/resources/application.properties
+++ b/dionysus-webapp/src/main/resources/application.properties
@@ -1,1 +1,4 @@
-logging.level.org.springframework: DEBUG
+logging.level.org.springframework: INFO
+spring.jpa.generate-ddl: true
+spring.jpa.show-sql: true
+spring.jpa.database: mysql
