--- a/dionysus-core/pom.xml
+++ b/dionysus-core/pom.xml
@@ -7,6 +7,7 @@
 		<groupId>org.dionysus</groupId>
 		<artifactId>dionysus-parent</artifactId>
 		<version>1.0-SNAPSHOT</version>
+		<relativePath>../pom.xml</relativePath>
 	</parent>
 
 	<artifactId>dionysus-core</artifactId>
@@ -17,12 +18,6 @@
 	  <dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
-			<exclusions>
-			  <exclusion>
-			    <groupId>org.springframework.boot</groupId>
-			    <artifactId>spring-boot-starter-jdbc</artifactId>
-			  </exclusion>
-			</exclusions>
 		</dependency>
     <dependency>
       <groupId>joda-time</groupId>
