--- a/dionysus-webapp/pom.xml
+++ b/dionysus-webapp/pom.xml
@@ -7,6 +7,7 @@
 		<groupId>org.dionysus</groupId>
 		<artifactId>dionysus-parent</artifactId>
 		<version>1.0-SNAPSHOT</version>
+    <relativePath>../pom.xml</relativePath>
 	</parent>
 
 	<artifactId>dionysus-webapp</artifactId>
@@ -60,10 +61,6 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
-		<dependency>
-			<groupId>org.apache.tomcat</groupId>
-			<artifactId>tomcat-jdbc</artifactId>
-		</dependency>
 	</dependencies>
 
 	<build>
@@ -72,7 +69,6 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-war-plugin</artifactId>
-				<version>2.6</version>
 				<configuration>
 					<overlays>
 						<overlay>
