--- a/dionysus-client/pom.xml
+++ b/dionysus-client/pom.xml
@@ -7,6 +7,7 @@
 		<groupId>org.dionysus</groupId>
 		<artifactId>dionysus-parent</artifactId>
 		<version>1.0-SNAPSHOT</version>
+    <relativePath>../pom.xml</relativePath>
 	</parent>
 
 	<artifactId>dionysus-client</artifactId>
