--- a/dionysus-webapp/src/main/resources/application-prod.properties
+++ b/dionysus-webapp/src/main/resources/application-prod.properties
@@ -1,3 +1,5 @@
 spring.jpa.generate-ddl: true
 spring.jpa.show-sql: true
 spring.jpa.database: mysql
+spring.datasource.test-on-borrow: true
+spring.datasource.validation-query: SELECT 1
