--- a/dionysus-core/pom.xml
+++ b/dionysus-core/pom.xml
@@ -20,6 +20,11 @@
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
 		</dependency>
     <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-test</artifactId>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
       <groupId>joda-time</groupId>
       <artifactId>joda-time</artifactId>
     </dependency>
